sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: type boolean
		var col :boolean =true
                         ^AlgBubbleSort1:16: error: not found: value col
while(col=true){
      ^